@@ -5,7 +5,9 @@
 #
 # SPDX-License-Identifier: GPL-2.0-or-later
 
-LoadPackage("AutoDoc");
+if fail = LoadPackage("AutoDoc", ">= 2019.07.17") then
+    Error("AutoDoc 2019.07.17 or newer is required");
+fi;
 
 AutoDoc( rec( 
     autodoc := true,
