@@ -129,6 +129,17 @@ Third sentence.
 </ManSection>
 
 
+<ManSection Label="ConStabilize">
+  <Oper Arg="arg" Name="ConStabilize" Label="for IsObject"/>
+  <Oper Arg="arg1,arg2" Name="ConStabilize" Label="for IsObject, IsObject"/>
+ <Description>
+This documentation should show the first two variants of the function,
+but not the third commented out one.
+<P/>
+ </Description>
+</ManSection>
+
+
 </Section>
 
 
